apps/production/apps/traefik-routes/proxmox.yaml
---
# ExternalName services for Proxmox nodes
apiVersion: v1
kind: Service
metadata:
  name: proxmox-node1
  namespace: traefik
spec:
  type: ExternalName
  externalName: "10.10.20.10"
  ports:
    - port: 8006
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-node2
  namespace: traefik
spec:
  type: ExternalName
  externalName: "10.10.20.11"
  ports:
    - port: 8006
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-node3
  namespace: traefik
spec:
  type: ExternalName
  externalName: "10.10.20.12"
  ports:
    - port: 8006
      protocol: TCP
---
# IngressRoute for Proxmox (with auth)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pve.home.lewelly.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve.home.lewelly.com`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
      services:
        - name: proxmox-lb
          kind: TraefikService
          serversTransport: proxmox-transport
  tls:
    secretName: home-gateway-tls
